<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/native_ad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="120dp">

                <com.pesonal.adsdk.Qureka_Icon
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <com.pesonal.adsdk.Qureka_Icon
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/review"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_setbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/setbox"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/remote"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <include layout="@layout/native_ad" />

            <LinearLayout
                android:id="@+id/linear_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/internet"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/voice"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_dvr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/dvr"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/festcirclelive_back_content"
                    android:fontFamily="@font/lato_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/features"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <include layout="@layout/native_ad" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
